Añadida pagina de test

--- a/public/test/index.html
+++ b/public/test/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="PhoneCanvas.js"></script>
+    <link rel="stylesheet" href="index.css">
     <title>Castory Cases</title>
 </head>
 <body>
-    <canvas width="700" height="700"></canvas>
+    <PhoneCanvas></PhoneCanvas>
 </body>
 </html>
